--- a/ehc001.html
+++ b/ehc001.html
@@ -12,7 +12,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <link href="F:\Desktop Folders\BootstrpFiles\bootstrap-3.1.1-dist\EHCWebsite\ehc001a.css" rel="stylesheet">
-    <!--Kindly adjust the reference links-->
+
+    
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,6 +25,9 @@
 
   <body>
 
+    <script src="F:\Desktop Folders\BootstrpFiles\bootstrap-3.1.1-dist\EHCWebsite\ehc001b.js" type="text/javascript">
+    </script>
+
     <div class = "navigation">
       <ul class="nav nav-pills">
       <li role="presentation" class="active" class="ColorScheme"><a href="#">Home</a></li>
@@ -32,9 +36,47 @@
       <li role="presentation" class="active" class="ColorScheme"><a href="#">Achievements</a></li>
       <li role="presentation" class="active" class="ColorScheme"><a href="#">Events</a></li>
       <li role="presentation" class="active" class="ColorScheme"><a href="#">Album</a></li>
-      <li role="presentation" class="active" class="ColorScheme"><a href="#">Members</a></li>
+      <li role="presentation" class="active" class="ColorScheme"><a href="F:\Desktop Folders\BootstrpFiles\bootstrap-3.1.1-dist\EHCWebsite\members.html">Members</a></li>
       <li role="presentation" class="active" class="ColorScheme"><a href="#">E-Magazine</a></li>
       </ul>
+    </div>
+
+    <div class="Gallery">
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="F:\Desktop Folders\BootstrpFiles\bootstrap-3.1.1-dist\EHCWebsite\GalleryPictures\Reebok.jpg" alt="...">
+            <div class="carousel-caption">
+              ...
+            </div>
+          </div>
+          <div class="item">
+            <img src="F:\Desktop Folders\BootstrpFiles\bootstrap-3.1.1-dist\EHCWebsite\GalleryPictures\Skoda.jpg" alt="...">
+            <div class="carousel-caption">
+              ...
+            </div>
+          </div>
+          ...
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
 
 
