--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
 <body id="page-top" class="index">
 
+
+    
+
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -329,7 +332,17 @@ Prof. Incharge: Prof. Sanjeev Gupta</h3>
                     <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
-            <div class="row">
+
+             <img src="img/team/Abhimanyu.jpg" class="circle-image"/>
+             <img src="img/team/Abhimanyu.jpg" class="circle-image"/>
+             <img src="img/team/Abhimanyu.jpg" class="circle-image"/>
+             <img src="img/team/Abhimanyu.jpg" class="circle-image"/>
+             <img src="img/team/Abhimanyu.jpg" class="circle-image"/>
+             <img src="img/team/Abhimanyu.jpg" class="circle-image"/>
+             <img src="img/team/Abhimanyu.jpg" class="circle-image"/>
+
+
+           <!-- <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/Abhimanyu.jpg" class="img-responsive img-circle" alt="">
@@ -585,7 +598,7 @@ Prof. Incharge: Prof. Sanjeev Gupta</h3>
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted"></p>
