More changes done

--- a/index.html
+++ b/index.html
@@ -148,95 +148,9 @@ This hobby center initiated by Prof. Suryakant Ingle (Former Professor, DA-IICT)
 The center organizes various technical and non-technical events from time to time like Technical Paper Presentation, Technical Debates, Robotics, CRO Revolution, Circuit building and trouble shooting and Educational cum sight seeing tours. It also organizes various Labs, Lectures and Doubt solving sessions on different topics from time to time.
 Apart from above mentioned technical aspects, EHC also help students in building team spirit by encouraging them to work together. The organization motivates capable students to learn technique of decision-making and managing things and develop all-round ability by making them part of many committees within itself which are meant for overall coordination and organization of different activities and events throughout the year.
 
-We always welcome suggestions for improvement.
+We always welcome suggestions for improvement.</h3>
 
-Prof. Incharge: Prof. Sanjeev Gupta</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-6 About-item">
-                    <a href="#AboutModal1" class="About-link" data-toggle="modal">
-                        <div class="About-hover">
-                            <div class="About-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/About/roundicons.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="About-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 About-item">
-                    <a href="#AboutModal2" class="About-link" data-toggle="modal">
-                        <div class="About-hover">
-                            <div class="About-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/About/startup-framework.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="About-caption">
-                        <h4>Startup Framework</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 About-item">
-                    <a href="#AboutModal3" class="About-link" data-toggle="modal">
-                        <div class="About-hover">
-                            <div class="About-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/About/treehouse.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="About-caption">
-                        <h4>Treehouse</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 About-item">
-                    <a href="#AboutModal4" class="About-link" data-toggle="modal">
-                        <div class="About-hover">
-                            <div class="About-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/About/golden.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="About-caption">
-                        <h4>Golden</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 About-item">
-                    <a href="#AboutModal5" class="About-link" data-toggle="modal">
-                        <div class="About-hover">
-                            <div class="About-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/About/escape.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="About-caption">
-                        <h4>Escape</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 About-item">
-                    <a href="#AboutModal6" class="About-link" data-toggle="modal">
-                        <div class="About-hover">
-                            <div class="About-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/About/dreams.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="About-caption">
-                        <h4>Dreams</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
+<h2>Faculty Mentor: Prof. Sanjeev Gupta</h2>
                 </div>
             </div>
         </div>
@@ -336,16 +250,26 @@ Prof. Incharge: Prof. Sanjeev Gupta</h3>
              <img src="img/team/Abhimanyu.jpg" class="circle-image"/>
              <img src="img/team/Anirudh.jpg" class="circle-image"/>
              <img src="img/team/Ashwin.jpg" class="circle-image"/>
+             <div class="clearfloat"></div>
              <img src="img/team/Bharat.jpg" class="circle-image"/>
              <img src="img/team/Chaitanya.jpg" class="circle-image"/>
              <img src="img/team/Dhaval.jpg" class="circle-image"/>
-             <img src="img/team/Shaleen.jpg" class="circle-image"/>
+             <div class="clearfloat"></div>
+             <img src="img/team/Lakshman.jpg" class="circle-image"/>
              <img src="img/team/Lavanya.jpg" class="circle-image"/>
              <img src="img/team/Mahima.jpg" class="circle-image"/>
+             <div class="clearfloat"></div>
+             <img src="img/team/Malav.jpg" class="circle-image"/>
              <img src="img/team/Parth.jpg" class="circle-image"/>
              <img src="img/team/Shaleen.jpg" class="circle-image"/>
-
-
+             <div class="clearfloat"></div>
+             <img src="img/team/Shoeb.jpg" class="circle-image"/>
+             <img src="img/team/Prerna.jpg" class="circle-image"/>
+             <img src="img/team/Rishu.jpg" class="circle-image"/>
+             <div class="clearfloat"></div>
+             <img src="img/team/Roshni.jpg" class="circle-image"/>
+             <img src="img/team/Yashodhan.jpg" class="circle-image"/>
+             
 
 
            <!-- <div class="row">
